Fixded broken responsiveness on smaller screen sizes

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -30,9 +30,16 @@
         transition: all 0.3 ease-in-out;
     }
 
-    /* nav {
-        height: 4rem;
-    } */
+    nav {
+        height: 6rem;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .logo {
+        margin-left: 36rem;
+        font-size: 35px;
+    }
 
     #hambuger-nav {
         display: flex;
@@ -42,14 +49,25 @@
         flex-direction: column;
         height: 100vh;
         padding-bottom: 0.5rem;
-        margin-top: -14rem;
-        margin-bottom: -35rem;
+        margin-top: 2rem;
+        margin-bottom: -28rem;
+        margin-top: -15rem;
     }
 
     #experience {
         margin-top: 2rem;
-        margin-bottom: 0;
-        height: 90vh;
+        height: 100vh;
+    }
+
+    .details-container {
+        padding: 1rem;
+        flex: 1;
+        background: var(--general-color-2);
+        color: var(--general-color-1);
+        border-radius: 2rem;
+        border: var(--button-border);
+        border-color: var(--button-container-border);
+        text-align: center;
     }
 
     .section__text__p3 {
@@ -99,6 +117,7 @@
         text-align: center;
         padding: 2.5em;
         margin-top: -3rem;
+        height: 55vh;
     }
 
     .profile-align {
@@ -107,11 +126,11 @@
     }
 
     #projects {
-        margin-top: -14rem;
+        margin-top: -5rem;
         padding-top: 10rem;
         height: 100vh;
         background-color: var(--general-color-1);
-        margin-bottom: 0;
+        margin-bottom: 5rem;
     }
 
     #socials-container {
@@ -124,8 +143,10 @@
         text-align: center;
     }
     .low-text-para-1 {
-        margin-left: 5rem;
+        margin-left: 20rem;
         margin-top: 5rem;
+        width: 36rem;
+        margin-bottom: 4rem;
     }
 
     #about {
@@ -136,6 +157,10 @@
         padding: 0 5rem 1rem 5rem;
         gap: 0;
         margin-top: -10rem;
+    }
+
+    .about-container {
+        padding-left: 5rem;
     }
 
     .arrow {
@@ -245,7 +270,7 @@
     #projects {
         display: flex;
         gap: 0;
-        margin-top: 0.4rem;
+        margin-top: 1rem;
         padding-top: 1rem;
         height: 100vh;
         background-color: var(--primary-color);
@@ -273,6 +298,7 @@
 
     .logo {
         font-size: 0.5rem;
+        margin-left: 6rem;
     }
 
     .profile-align {
@@ -307,7 +333,19 @@
         margin-top: 0;
     }
     #experience {
-        margin-bottom: 25rem;
+        margin-bottom: 37rem;
+        padding: 0;
+    }
+
+    .details-container {
+        padding: 1rem;
+        flex: 1;
+        background: var(--general-color-2);
+        color: var(--general-color-1);
+        border-radius: 2rem;
+        border: var(--button-border);
+        border-color: var(--button-container-border);
+        text-align: center;
     }
 
     .about-container {
@@ -320,7 +358,11 @@
     }
 
     .article-container {
-        height: fit-content;
+        display: flex;
+        justify-content: center;
+        min-height: max-content;
+        width: 12rem;
+        align-items: center;
     }
 
     .last-div {
