--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ article,
 } */
 
 .about-heading {
-    color: var(--primary-color-2);
+    color: var(--general-color-3);
     align-self: flex-end;
     font-weight: bold;
     margin-bottom: 1rem;
@@ -322,7 +322,8 @@ article,
     text-align: center;
 }
 .about-container {
-    display: block;
+    display: flex;
+    justify-content: center;
     background: var(--primary-color);
     color: var(--general-color-1);
     border-radius: 2rem;
